Replace PDFsharp with external tools for better extraction
- Removed PDFsharp dependency completely
- Now using pdftotext.exe for text extraction
- Preserves layout, formatting, indentation
- Handles invalid XML characters properly
- Added file logging to %APPDATA%\PDFd\pdfd.log
- Resizable UI panels with GridSplitter
- Actually works with real PDFs now

Tools required:
- pdftotext.exe from Xpdf tools
- pdfinfo.exe from Xpdf tools

Result: Man pages and technical docs convert perfectly

--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,7 @@ BenchmarkDotNet.Artifacts/
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
+
+# External tools (users should download)
+PDFd.UI/Tools/*.exe
+PDFd.UI/Tools/*.dll
