Fix: Xpdf tools path, UI text professionalized, dual window startup bug

--- a/PDFd.Core/PDFd.Core.csproj
+++ b/PDFd.Core/PDFd.Core.csproj
@@ -1,14 +1,28 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
+  <PropertyGroup>
+    <TargetFramework>net8.0</TargetFramework>
+    <Nullable>enable</Nullable>
+    <ImplicitUsings>enable</ImplicitUsings>
+  </PropertyGroup>
+
+  <!-- Project References -->
   <ItemGroup>
     <ProjectReference Include="..\PDFd.Domain\PDFd.Domain.csproj" />
     <ProjectReference Include="..\PDFd.Processing\PDFd.Processing.csproj" />
   </ItemGroup>
 
-  <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+  <!-- NuGet Packages -->
+  <ItemGroup>
+    <PackageReference Include="DocumentFormat.OpenXml" Version="3.3.0" />
+  </ItemGroup>
+
+  <!-- Include Xpdf tools -->
+  <ItemGroup>
+    <Content Include="Tools\Xpdf\*.exe">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+  </ItemGroup>
 
 </Project>
